Fix unwanted white-space wrapping behavior on algorithm implementation transition

--- a/src/components/AlgorithmImplementation/AlgorithmImplementation.module.scss
+++ b/src/components/AlgorithmImplementation/AlgorithmImplementation.module.scss
@@ -23,12 +23,12 @@
 .implementation {
   opacity: 0;
   transition: all 1000ms ease;
-  margin-left: -200px;
+  transform: translateX(-200px);
 }
 
 .transition-active {
   opacity: 1;
-  margin-left: 0;
+  transform: translateX(0px);
 }
 
 @media (max-width: v.$viewport-size-medium) {
